name:                HaScene
version:             0.1
homepage:            https://github.com/TaKeTube/HaScene
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaScene
                     , UI.Game
                     , HaRender
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , array
                     , lens
                     , linear
                     , random
                     , transformers
                     , vty
  default-language:    Haskell2010

executable HaScene
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , HaScene
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TaKeTube/HaScene